tests/cases/smoke/invalid/func_missing_param_type.ty
func add(a, b: int) -> int = a + b
